# HACKHATHON2

./: .gitignore  CLAUDE.md  README.md  RTK.rtf  err_pt.txt  pyproject.toml  requirements.txt
.claude skill/: settings.json
prompts/: README.md  SYSTEM_PROMPT.md  tier_a.md  tier_b.md  tier_c.md  tier_d.md
site/: README.md  guide.html  index.html  leaderboard.html
site/css/: minecraft.css  skyrun.css
site/data/: achievements.json  teams.json
site/js/: leaderboard.js  map.js  scoring.js  theme.js
tier_a/: CONCEPT.md
tier_a/env_attitude/: README.md  __init__.py  charging_env.py  constants.py  dynamics.py  env.py  forest.py  lidar2d.py  lidar3d.py  mapping.py  occupancy.py  online_planner.py  reference_trajectory.py  scenarios.py  scenarios_pirouette.py
tier_a/scaffold/: charging_mission.py  hybrid_attitude.py  qtable_attitude.py  starter_attitude.ipynb  team_solution_attitude.py  validate_team_attitude.py
tier_b/: .gitignore  CONCEPT.md  README.md  __init__.py  blender_scene.py  callbacks.py  compare.py  config.yaml  eval.py  export_blender.py  probe_flick.py  render_video.py  rewards.py  train_common.py  train_ppo.py  train_sac.py  viz_lidar.py
tier_b/envs/: __init__.py  collision_ellipsoid.py  ctbr.py  forest_gen.py  lidar.py  pirouette_aviary.py  trajectory.py
tier_c/: .gitignore  AI-SkyRun-Hackathon-main.code-workspace  CONCEPT.md  README.md  apf_controller.py  astar2d.py  blender_manual.py  engine_test.py  err.txt  kinematic_autopilot.py  metrics_report.py  realistic_flight.py  sim_headless.py  solution.py
tier_d/: CONCEPT.md  WIND_TRACK.md
(+52 files in other folders)
